fix: image w text image overflow

--- a/themes/kinder/styles/section.image-with-text.scss
+++ b/themes/kinder/styles/section.image-with-text.scss
@@ -22,6 +22,7 @@
 
       [ui-block="media"] {
         height: inherit;
+        overflow: hidden;
         color: oklch(from var(--fg-color) calc(l - 0.4) calc(c + 0.0181) calc(h + 6.6));
 
         & > img {
